--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,11 @@
   </head>
   <body>
     <h1>The Imagination of Ghibli</h1>
-    <label for="countries">Select a Ghibli Studios Film:</label>
-    <select id="countries">
+    <label for="films">Select a Ghibli Studios Film:</label>
+    <select id="films">
       <option selected disabled></option>
     </select>
-    <div id="country"></div>
+    <div id="film-details"></div>
       <!-- <div class="globe"></div> -->
   </body>
 </html>
