--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,24 @@
     <title>The Imagination of Ghibli</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/bundle.js"></script>
+    <style>
+       @font-face {
+         font-family: font;
+         src: url(css/images/font.otf);
+       }
+       a{  color: white;}
+   </style>
   </head>
   <body>
+    <div class="background">
+
+
     <h1>The Imagination of Ghibli</h1>
     <label for="films">Select a Ghibli Studios Film:</label>
     <select id="films">
       <option selected disabled></option>
     </select>
     <div id="film-details"></div>
-    
+  </div>
   </body>
 </html>
