improved styling, gap at top

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
    </style>
   </head>
   <body>
-    <div class="background">
+    <div class="heading">
 
 
     <h1>The Imagination of Ghibli</h1>
@@ -22,6 +22,8 @@
     <select id="films">
       <option selected disabled></option>
     </select>
+    </div>
+    <div class="background">
     <div id="film-details"></div>
   </div>
   </body>
